fix: overflow

--- a/project1/styles/index.css
+++ b/project1/styles/index.css
@@ -58,13 +58,10 @@ body {
   padding: 0;
 }
 
-a {
-  text-decoration: none;
-  font-weight: 400;
-}
-
 a,
 a:visited {
+  text-decoration: none;
+  font-weight: 400;
   color: var(--grey-60);
 }
 
